test/bad/empty0.script
/*
nopacc 1:1 'expected Grammar'
*/
